--- a/app/index.html
+++ b/app/index.html
@@ -39,7 +39,8 @@
 
             <ul class="nav navbar-nav">
               <!--<li class="active"><a href="#/">Home</a></li>-->
-              <li><a class="active" href="#/hello">Say Hello</a></li>
+              <li><a href="#/hello">Say Hello</a></li>
+              <li><a class="active" href="#/invoice">Invoice</a></li>
               <!--<li><a ng-href="#/about">About</a></li>-->
               <!--<li><a ng-href="#/">Contact</a></li>-->
             </ul>
@@ -92,6 +93,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/hello.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/invoice.js"></script>
         <!-- endbuild -->
 </body>
 </html>
