--- a/app/index.html
+++ b/app/index.html
@@ -39,8 +39,9 @@
 
             <ul class="nav navbar-nav">
               <!--<li class="active"><a href="#/">Home</a></li>-->
+              <li class="active"><a href="#/todo">TODO Manager</a></li>
               <li><a href="#/hello">Say Hello</a></li>
-              <li><a class="active" href="#/invoice">Invoice</a></li>
+              <li><a href="#/invoice">Invoice</a></li>
               <!--<li><a ng-href="#/about">About</a></li>-->
               <!--<li><a ng-href="#/">Contact</a></li>-->
             </ul>
@@ -94,6 +95,7 @@
         <script src="scripts/controllers/hello.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/invoice.js"></script>
+        <script src="scripts/controllers/todo.js"></script>
         <!-- endbuild -->
 </body>
 </html>
